--- a/view/game.ejs
+++ b/view/game.ejs
@@ -5,10 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Spotify Game</title>
+    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link rel="stylesheet" href="./styles/game.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/socket.io/2.2.0/socket.io.js"></script>
-    <script src="./scripts/game.js"></script>
+    <script src="scripts/game.js"></script>
 </head>
 <body>
-    
+    <ul id="users"></ul>
 </body>
 </html>
