--- a/view/game.ejs
+++ b/view/game.ejs
@@ -11,6 +11,21 @@
     <script src="scripts/game.js"></script>
 </head>
 <body>
+    <!-- <ul id="users_in_room"></ul> -->
+    <form>
+        <div class="answer-container">
+            <div class="answer">
+                <h2>Artist</h2>
+                <input type="text">
+            </div>
+            <p>-</p>
+            <div class="answer">
+                <h2>Song</h2>
+                <input type="text">
+            </div>
+        </div>
+        <button>confirm</button>
+    </form>
     <ul id="users"></ul>
 </body>
 </html>
