--- a/static/styles/game.css
+++ b/static/styles/game.css
@@ -8,6 +8,28 @@ body{
     height: 100vh;
     width: 100vw;
     font-family: 'Montserrat', sans-serif;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+}
+button{
+    border-radius: 20px;
+    background: #1DB954;
+    border: solid 1px #1DB954;
+    font-size: 12px;
+    font-weight: bold;
+    padding: 12px 45px;
+    letter-spacing: 1px;
+    text-transform: uppercase;
+    color: white;
+    cursor: pointer;
+    letter-spacing: 2px;
+    transition: .25s ease-in, transform 80ms ease-in;
+}
+button:hover{
+    background: white;
+    color: #1DB954;
 }
 /* Currently Online Users */
 
@@ -17,5 +39,84 @@ ul#users{
     color: white;
     top: 0;
     left: 0;
-    width: 150px;
+    min-height: 300px;
+    max-height: 450px;
+    width: 240px;
+    overflow-y: scroll;
+    border-bottom:#535353 10px solid;
+}
+ul#users li{
+    width: 80%;
+    margin:20px auto;
+    text-decoration: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border-bottom: #535353 1px solid;
+    padding: 5px;
+}
+ul#users li img{
+    border-radius: 50%;
+    width: 50px
+}
+ul#users li h2{
+    font-size: 16px;
+    font-weight: 100;
+    margin-left: 10px
+}
+.userSelf{
+    background: #1DB954;
+}
+
+form{
+    display: flex;
+    color: white;
+    align-items: center;
+    flex-direction: column;
+}
+form .answer-container{
+    display: flex;
+    align-items: center;
+}
+form .answer-container div h2{
+    text-align: center;
+    font-weight: 100;
+}
+form .answer-container div input[type='text']{
+    background: white;
+    border: none;
+    padding: 5px 10px;
+    border-bottom: #1DB954 solid 5px;
+    width: 200px;
+}
+form .answer-container p{
+    color: #1DB954;
+    margin-top: 10px;
+    font-size: 100px;
+    font-weight: 500;
+}
+form .answer-container div input[type='text']:focus{
+    outline: none;
+}
+/* Custom Scrollbar 
+#########################*/
+/* width */
+::-webkit-scrollbar {
+    width: 5px;
+}
+
+/* Track */
+::-webkit-scrollbar-track {
+    background: transparent; 
+}
+
+/* Handle */
+::-webkit-scrollbar-thumb {
+    background: #888;
+    border-radius: 10px; 
+}
+
+/* Handle on hover */
+::-webkit-scrollbar-thumb:hover {
+    background: #555; 
 }
