--- a/view/game.ejs
+++ b/view/game.ejs
@@ -12,6 +12,9 @@
 </head>
 <body>
     <!-- <ul id="users_in_room"></ul> -->
+    <main class="container">
+        
+    </main>
     <form>
         <div class="answer-container">
             <div class="answer">
