--- a/static/styles/game.css
+++ b/static/styles/game.css
@@ -156,6 +156,10 @@ main .track-reveal{
 main .track-reveal p{
     color: #1DB954;
 }
+
+main .track_guess .audio_time{
+    height: 50px;
+}
 /* Form styling 
 ###########################*/
 form{
