--- a/static/styles/game.css
+++ b/static/styles/game.css
@@ -1,3 +1,5 @@
+@import "./anim.css";
+
 *{
     margin: 0;
     padding: 0;
@@ -156,9 +158,14 @@ main .track-reveal{
 main .track-reveal p{
     color: #1DB954;
 }
-
+main .track_guess{
+    position: relative;
+}
 main .track_guess .audio_time{
-    height: 50px;
+    height: 10px;
+    background: #1DB954;
+    position: absolute;
+    bottom: 0;
 }
 /* Form styling 
 ###########################*/
