--- a/static/styles/anim.css
+++ b/static/styles/anim.css
@@ -1,15 +1,38 @@
+.pause_animation{
+    animation-play-state: paused!important;
+}
+.continue_animation{
+    animation-play-state: running;
+}
+main #time_is_up h2.start{
+    animation: fadeUp 1s forwards;
+    animation-delay: 4s;
+}
+main #time_is_up p.start{
+    animation: fadeUpAndOut 3s forwards;
+    animation-delay: 5s;
+}
 .audio_time.start{
     animation: progressBar5s 5s forwards; 
 }
 .readyMsg.start::after{
-    content: '5';
-    color: white;
-    font-size: 22px;
     animation: startCounter 7s forwards;
     animation-delay: 3s;
 }
+.readyMsg::after{
+    content: '5';
+    color: white;
+    font-size: 22px;
+}
+.readyMsg.start15::after{
+    content: '15';
+    color: white;
+    font-size: 22px;
+    animation: startCounter15 18s forwards;
+    animation-delay: 2s;
+}
 #innerOutline.start{
-    animation: rotate 3.5s forwards infinite linear;
+    animation: rotate 2s forwards infinite linear;
     animation-delay: 3s;
     transform-origin: center;
 }
@@ -46,11 +69,85 @@ svg#play_btn.start{
     }
 }
 
+@keyframes startCounter15{
+    0%{
+        content: '15'
+    }
+    6.66%{
+        content: '14'
+    }
+    13.33%{
+        content: '14'
+    }
+    19.99%{
+        content: '12'
+    }
+    26.66%{
+        content: '11'
+    }
+    33.33%{
+        content: '10'
+    }
+    39.99%{
+        content: '9'
+    }
+    46.66%{
+        content: '8'
+    }
+    53.33%{
+        content: '7'
+    }
+    59.99%{
+        content: '6'
+    }
+    66.66%{
+        content: '5'
+    }
+    73.33%{
+        content: '4'
+    }
+    79.9%{
+        content: '3'
+    }
+    86.6%{
+        content: '2'
+    }
+    93.3%{
+        content: '1'
+    }
+    100%{
+        content: '0'
+    }
+}
 @keyframes rotate{
     0%{
         transform: rotate(0);
     }
     100%{
         transform: rotate(360deg);
+    }
+}
+
+@keyframes fadeUp{
+    0%{
+        transform: translate(0,0)
+    }
+    100%{
+        transform: translate(0,-200px)
+    }
+}
+
+@keyframes fadeUpAndOut{
+    0%{
+        transform: translate(0,200px)
+    }
+    25%{
+        transform: translate(0,-20px)
+    }
+    75%{
+        transform: translate(0,-20px)
+    }
+    100%{
+        transform: translate(0,-200px)
     }
 }
