--- a/view/game.ejs
+++ b/view/game.ejs
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Spotify Game</title>
-    <link href="https://fonts.googleapis.com/css?family=Montserrat" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Montserrat|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="./styles/game.css">
     <script src="/socket.io/socket.io.js" defer></script>
     <script src="./scripts/game.js" defer></script>
