--- a/static/styles/game.css
+++ b/static/styles/game.css
@@ -95,6 +95,7 @@ button:focus{
 #track_list{
     width: 250px;
     border-left: solid 5px #535353;
+    border-bottom: 8px #1DB954 solid;
     background: #212121;
     height: 80%;
     position: fixed;
@@ -103,6 +104,14 @@ button:focus{
     padding: 10px;
     top: 0;
     overflow-y: scroll;
+}
+
+#track_list h1{
+    width: 100%;
+    color: #1DB954;
+    text-align: center;
+    padding: 5px;
+    font-size: 18px;
 }
 #track_list .track_container{
     justify-content: space-between;
@@ -161,9 +170,13 @@ ul#users li img{
     border-radius: 50%;
     width: 50px
 }
-ul#users li h2{
+ul#users li div h2{
     font-size: 16px;
     font-weight: 100;
+}
+ul#users li div p{
+    color: #1DB954;
+    font-weight: bold;
 }
 .userSelf{
     background: #1DB954;
