--- a/view/game.ejs
+++ b/view/game.ejs
@@ -8,7 +8,7 @@
     <link href="https://fonts.googleapis.com/css?family=Montserrat|Press+Start+2P" rel="stylesheet">
     <link rel="stylesheet" href="./styles/game.css">
     <script src="/socket.io/socket.io.js" defer></script>
-    <script src="./scripts/game.js" defer></script>
+    <script src="./scripts/game.js" type="module" defer></script>
 </head>
 <body>
     <ul id="waiting_room">
